web/book/tests/snapshots/snapshot__language-features__target__examples__1.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.mssql\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  TOP (10) *
FROM
  employees
ORDER BY
  age

